syntax = "proto3";
package client;

import "shared.proto";

option go_package = "github.com/connet-dev/connet/pbc";

message Request {
  // Soft one-of
  Connect connect = 1;

  message Connect {
  }
}

message Response {
  shared.Error error = 1;

  Connect connect = 2;

  message Connect {
    ProxyProtoVersion ProxyProto = 1;
  }
}

enum ProxyProtoVersion {
  None = 0;
  V1 = 1;
  V2 = 2;
}
